[package]
name = "shelley"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
axum = "0.2.3"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.17"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
sqlx = { version = "0.5.7" , features = ["mysql", "chrono", "offline", "runtime-tokio-native-tls", "uuid"] }
tokio = { version="1.10.1", features=["full"]}
uuid = { version = "0.8.2", features = ["v4", "serde"] }
